--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,11 +20,13 @@
     <string name="coursera_add">添加病例</string>
     <string name="patient_register">我要挂号</string>
     <string name="coursera">病例详情</string>
-    <string name="live_create">添加病情</string>
+    <string name="live_create">症状诊疗</string>
     <string name="coursera_name">课程名称</string>
     <string name="coursera_summary">病例描述</string>
+    <string name="coursera_summary1">请填写病例描述</string>
     <string name="symptom_desc">症状描述</string>
     <string name="coursera_begin">添加病例</string>
+    <string name="save_encounter">保存病例</string>
     <string name="iwantregister">我要挂号</string>
     <string name="coursera_type">课程类别</string>
     <string name="coursera_cover">课程封面</string>
